-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 1.10.0
-
Fix Version/s: 1.10.0
-
Component/s: libprocess
-
Labels:None
-
Target Version/s:
Observing the following master crash on a testing cluster roughly once in a hour:
F0408 14:17:33.470850 18423 libevent_ssl_socket.cpp:193] Check failed: 'self->bev' Must be non NULL @ 0x7fa7db12e2ad google::LogMessage::Fail() @ 0x7fa7db130508 google::LogMessage::SendToLog() @ 0x7fa7db12de43 google::LogMessage::Flush() @ 0x7fa7db130e49 google::LogMessageFatal::~LogMessageFatal() @ 0x7fa7db1004de google::CheckNotNull<>() @ 0x7fa7db0fb6ca _ZNSt17_Function_handlerIFvvEZN7process7network8internal21LibeventSSLSocketImpl8shutdownEiEUlvE_E9_M_invokeERKSt9_Any_data @ 0x7fa7db107091 process::async_function() @ 0x7fa7d7178978 event_process_active_single_queue @ 0x7fa7d7178e5d event_process_active @ 0x7fa7d71795b9 event_base_loop @ 0x7fa7db106bed process::EventLoop::run() @ 0x7fa7d6cfe2b0 (unknown) @ 0x7fa7d651ce65 start_thread @ 0x7fa7d624588d __clone