Fixed libevent SSL socket shutdown race condition.

This fixes an issue where the functions `shutdown()` and
`event_callback()` race to access the bufferevent held by
our libevent SSL socket implementation, leading to a
CHECK failure.

This race resulted in MESOS-10111, where multiple rapid
changes in ZK membership led to one master re-linking to
another multiple times in RECONNECT mode. This causes
`shutdown()` to be called on the existing socket while
it's attempting a connection, at which point a failure to
connect can produce the CHECK failure.

Review: https://reviews.apache.org/r/72354/